# gce-project

./: .gitignore  README.md  build.bat  readme.md
pico_w/: build.bat
pico_w/src/: CMakeLists.txt
pico_w/src/server/: main.c
windows/: build.bat
windows/src/client/: main.c
